--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -10,42 +10,39 @@ on:
       - main
       - stable
   pull_request:
+    paths:
+      - "ReconnectED-web/**"
   workflow_dispatch:
 
-jobs:
-  build:
-    name: Lint
-    runs-on: ubuntu-latest
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.sha }}
+  cancel-in-progress: true
 
+jobs:
+  lint-web:
+    name: Lint - Web
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: read
       # To report GitHub Actions status checks
       statuses: write
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}/ReconnectED-web
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v5
         with:
-          # super-linter needs the full git history to get the
-          # list of files that changed across commits
-          fetch-depth: 0
           persist-credentials: false
 
-      - name: Super-linter
-        uses: super-linter/super-linter@v8.2.0 # zizmor: ignore[unpinned-uses]
-        env:
-          # To report GitHub Actions status checks
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FIX_BIOME_FORMAT: false
-          FIX_BIOME_LINT: false
-          # Disable linters we don't use
-          VALIDATE_CSS: false
-          VALIDATE_BIOME_FORMAT: false
-          VALIDATE_BIOME_LINT: false
-          VALIDATE_GIT_COMMITLINT: false
-          VALIDATE_JSCPD: false
-          VALIDATE_JSON_PRETTIER: false
-          VALIDATE_JSON: false
-          VALIDATE_MARKDOWN: false
-          VALIDATE_MARKDOWN_PRETTIER: false
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2 # zizmor: ignore[unpinned-uses]
+
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
+
+      - name: Run ESLint
+        working-directory: ./ReconnectED-web
+        run: bun run lint
