--- a/ReconnectED-web/package.json
+++ b/ReconnectED-web/package.json
@@ -9,7 +9,7 @@
         "preview": "nuxt preview",
         "postinstall": "nuxt prepare",
         "lint": "eslint --ext .js,.ts,.vue .",
-        "test": "vitest",
+        "test": "vitest --run --coverage --typecheck",
         "test:watch": "vitest --watch"
     },
     "dependencies": {
@@ -23,6 +23,7 @@
     },
     "devDependencies": {
         "@nuxt/test-utils": "^3.19.2",
+        "@vitest/coverage-v8": "^3.2.4",
         "@vue/test-utils": "^2.4.6",
         "happy-dom": "^20.0.7",
         "playwright-core": "^1.56.1",
