--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Write Google Services File
         run: |
-          echo "${{ secrets.GOOGLE_SERVICES }}" > app/google-services.json
+          echo "${{ secrets.GOOGLE_SERVICES }}" | base64 --decode > app/google-services.json
           if [ ! -f app/google-services.json ]; then
             echo "Failed to create google-services.json"
             exit 1
