--- a/ReconnectED-Android/gradle/libs.versions.toml
+++ b/ReconnectED-Android/gradle/libs.versions.toml
@@ -28,6 +28,7 @@ uiGraphics = "1.10.0-alpha04"
 uiTooling = "1.9.3"
 uiToolingPreview = "1.10.0-alpha05"
 vico = "2.2.0"
+firebaseAi = "17.4.0"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
@@ -65,6 +66,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
 vico-compose-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico" }
+firebase-ai = { group = "com.google.firebase", name = "firebase-ai", version.ref = "firebaseAi" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
