--- a/ReconnectED-Android/gradle/libs.versions.toml
+++ b/ReconnectED-Android/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+accompanistDrawablepainter = "0.32.0"
 activityCompose = "1.8.0"
 agp = "8.13.0"
 appcompat = "1.7.1"
@@ -31,6 +32,7 @@ vico = "2.2.0"
 firebaseAi = "17.4.0"
 
 [libraries]
+accompanist-drawablepainter = { module = "com.google.accompanist:accompanist-drawablepainter", version.ref = "accompanistDrawablepainter" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
