--- a/ReconnectED-Android/gradle/libs.versions.toml
+++ b/ReconnectED-Android/gradle/libs.versions.toml
@@ -30,6 +30,8 @@ uiTooling = "1.9.3"
 uiToolingPreview = "1.10.0-alpha05"
 vico = "2.2.0"
 firebaseAi = "17.4.0"
+datastore = "1.2.0-beta01"
+gson = "2.13.1"
 
 [libraries]
 accompanist-drawablepainter = { module = "com.google.accompanist:accompanist-drawablepainter", version.ref = "accompanistDrawablepainter" }
@@ -69,6 +71,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
 vico-compose-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico" }
 firebase-ai = { group = "com.google.firebase", name = "firebase-ai", version.ref = "firebaseAi" }
+androidx-datastore = { group = "androidx.datastore", name = "datastore", version.ref = "datastore" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
