--- a/ReconnectED-Android/app/src/main/AndroidManifest.xml
+++ b/ReconnectED-Android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,11 @@
     <uses-permission
         android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
 
     <queries>
         <!-- Allow querying ALL launchable apps -->
@@ -34,5 +39,31 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- App Blocked Activity -->
+        <activity
+            android:name=".activities.AppBlockedActivity"
+            android:exported="false"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTop"
+            android:taskAffinity=""
+            android:theme="@style/Theme.ReconnectED" />
+
+        <!-- App Limit Monitor Service -->
+        <service
+            android:name=".services.AppLimitMonitorService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="specialUse">
+            <property
+                android:name="android.app.PROPERTY_SPECIAL_USE_FGS_SUBTYPE"
+                android:value="Monitors app usage and enforces time limits" />
+        </service>
+
+        <!-- App Block Overlay Service -->
+        <service
+            android:name=".services.AppBlockOverlayService"
+            android:enabled="true"
+            android:exported="false" />
     </application>
 </manifest>
