--- a/ReconnectED-web/package.json
+++ b/ReconnectED-web/package.json
@@ -19,6 +19,7 @@
         "@nuxt/eslint": "1.10.0",
         "@nuxt/ui": "4.1.0",
         "eslint": "^9.39.0",
+        "motion-v": "^1.7.4",
         "nuxt": "^4.2.0",
         "typescript": "^5.9.3",
         "vue": "^3.5.22",
