--- a/ReconnectED-web/package.json
+++ b/ReconnectED-web/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@nuxt/eslint": "1.10.0",
         "@nuxt/ui": "4.1.0",
+        "chart.js": "^4.5.1",
         "eslint": "^9.39.0",
         "motion-v": "^1.7.4",
         "nuxt": "^4.2.0",
