--- a/ReconnectED-web/package.json
+++ b/ReconnectED-web/package.json
@@ -33,6 +33,7 @@
         "@nuxt/test-utils": "^3.20.1",
         "@vitest/coverage-v8": "^4.0.5",
         "@vue/test-utils": "^2.4.6",
+        "firebase-admin": "^13.5.0",
         "happy-dom": "^20.0.10",
         "playwright-core": "^1.56.1",
         "vitest": "^4.0.5",
